--- a/Hadoop/commands.ipynb
+++ b/Hadoop/commands.ipynb
@@ -3,9 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "commands.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO3kH2EjIzNw288nelctxG1",
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMEsCuB03tepEMkWccHMeVc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +30,34 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "CieQlXnveO2P"
+        "id": "6AFZ3i2HerNc"
       },
       "source": [
-        ""
+        "# Hadoop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tsc1jg5Re6dH"
+      },
+      "source": [
+        "# display the contents\n",
+        "hadoop fs -ls\n",
+        "\n",
+        "# upload a file\n",
+        "hadoop fs -put /path/src/file.csv /path/dest/file.csv\n",
+        "\n",
+        "# upload a file with block size\n",
+        "hadoop fs -D dfs.blocksize=1m -put /path/src/file.csv /path/dest/file.csv\n",
+        "\n",
+        "# check the file\n",
+        "hdfs fsck /path/dest/file.csv\n",
+        "\n",
+        "hdfs fsck /path/dest/file.csv -files -locations -blocks\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
