--- a/local_RAG/Text2SQL.ipynb
+++ b/local_RAG/Text2SQL.ipynb
@@ -2,14 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "\n",
+    "with open(\"config.yaml\", \"r\") as config_file:\n",
+    "    config = yaml.safe_load(config_file)\n",
+    "\n",
+    "DATABASE_USERNAME = config[\"database\"][\"username\"]\n",
+    "DATABASE_PASSWORD = config[\"database\"][\"password\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input_variables=['data_description', 'text'] input_types={} partial_variables={} template='[INST] You are given data tables in postgres.\\n\\n[DATA_DESCRIPTION]\\n{data_description}\\n[\\\\DATA_DESCRIPTION]\\n\\nYour task is to identify what data are required to answer a user\\'s question and\\nto generate a valid SQL query for postgres that will include data required to answer a user\\'s question.\\n\\nAnswer is a JSON: {{\"sql_query\":  valid_sql_query}}. Don\\'t add anything else.\\nWhen merging two tables add a table identifier.\\nIf you can\\'t provide an answer based on the tables, say so.\\n\\n[EXAMPLE]For example:\\nUser question: \"What is the total number of orders placed by customers from the state of SP in 2018?\"\\nExpected answer in JSON: {{\"sql_query\": \"SELECT COUNT(o.order_id) AS total_orders \\nFROM ecommerce.orders AS o \\nLEFT JOIN ecommerce.customers AS c ON o.customer_id = c.customer_id \\nWHERE o.order_purchase_timestamp >= \\'2018-01-01\\' \\nAND o.order_purchase_timestamp < \\'2019-01-01\\' \\nAND c.customer_state = \\'SP\\'\"}}\\n[\\\\EXAMPLE]\\n\\nUser question: {text}\\n[\\\\INST]'\n"
+      "{\"sql_query\": \"SELECT COUNT(o.order_id) AS total_orders \n",
+      "FROM ecommerce.orders AS o \n",
+      "LEFT JOIN ecommerce.customers AS c ON o.customer_id = c.customer_id \n",
+      "WHERE o.order_purchase_timestamp >= '2017-01-01' \n",
+      "AND o.order_purchase_timestamp < '2018-01-01' \n",
+      "AND c.customer_state = 'SP'\"}\n",
+      "   total_orders\n",
+      "0         17760\n"
      ]
     }
    ],
@@ -18,7 +40,11 @@
     "\n",
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_ollama import OllamaLLM\n",
-    "llm = OllamaLLM(model=\"llama3.2\")\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "db_connection = create_engine(f\"postgresql+psycopg2://{DATABASE_USERNAME}:{DATABASE_PASSWORD}@localhost:5432/ragdev\")\n",
+    "\n",
     "\n",
     "table_description = \"\"\"The first table is 'customers'.\n",
     "It contains information about customers.\n",
@@ -105,6 +131,9 @@
     "Data frame: {table}\n",
     "[\\\\INST]\"\"\"\n",
     "\n",
+    "def execute_query(query):\n",
+    "    return pd.read_sql_query(query, db_connection)\n",
+    "\n",
     "def text2sql(question,\n",
     "             question_to_sql_prompt = template_question_to_sql,\n",
     "             df_to_insight_prompt = template_sql_to_insight,\n",
@@ -120,6 +149,17 @@
     "        ]\n",
     "    )\n",
     "    # print(prompt_sql)\n",
+    "    llm = OllamaLLM(model=\"llama3.2\")\n",
+    "    llm_chain = prompt_sql | llm\n",
+    "    response = llm_chain.invoke({\n",
+    "        \"text\": question,\n",
+    "        \"data_description\": data_description,\n",
+    "    })\n",
+    "    print(response)\n",
+    "    json_response = json.loads(response.replace('\\n',' '))\n",
+    "    sql_query = json_response['sql_query']\n",
+    "    df_response = execute_query(sql_query)\n",
+    "    print(df_response)\n",
     "    \n",
     "\n",
     "question = \"What is the total number of orders placed by customers from the state of SP in 2017?\"\n",
